@@ -15,10 +15,8 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.client.RestTemplate;
 
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
@@ -26,186 +24,219 @@ import java.util.stream.Collectors;
 public class FornecedorService {
 
     @Autowired private FornecedorRepository repository;
-    @Autowired private ProdutoRepository produtoRepository; // Necessário para sugestão de compras
+    @Autowired private ProdutoRepository produtoRepository;
 
-    // --- CRUD PRINCIPAL (MANTIDO) ---
+    // --- LEITURA ---
 
     @Transactional(readOnly = true)
     public Page<FornecedorDTO> listar(String termo, Pageable pageable) {
-        Page<Fornecedor> page;
-        if (termo == null || termo.isBlank()) {
-            page = repository.findAll(pageable);
-        } else {
-            page = repository.buscarAtivosPorTermo(termo, pageable);
+        if (termo != null && !termo.trim().isEmpty()) {
+            return repository.buscarAtivosPorTermo(termo, pageable).map(this::toDTO);
         }
-        return page.map(this::toDTO);
+        return repository.findAll(pageable).map(this::toDTO);
     }
 
-    public FornecedorDTO salvar(FornecedorDTO dto) {
-        String cnpjLimpo = limparCnpj(dto.cnpj());
-        if (repository.existsByCnpj(cnpjLimpo)) {
-            throw new ValidationException("Já existe um fornecedor com este CNPJ.");
-        }
-        Fornecedor f = new Fornecedor();
-        copiarDtoParaEntidade(dto, f);
-        f.setCnpj(cnpjLimpo);
-        return toDTO(repository.save(f));
-    }
-
-    public FornecedorDTO atualizar(Long id, FornecedorDTO dto) {
-        Fornecedor f = repository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Fornecedor não encontrado"));
-
-        String cnpjLimpo = limparCnpj(dto.cnpj());
-        // Verifica duplicidade apenas se o CNPJ mudou
-        if (!f.getCnpj().equals(cnpjLimpo) && repository.existsByCnpj(cnpjLimpo)) {
-            throw new ValidationException("CNPJ já pertence a outro fornecedor.");
-        }
-
-        copiarDtoParaEntidade(dto, f);
-        f.setCnpj(cnpjLimpo);
-        return toDTO(repository.save(f));
-    }
-
-    public void excluir(Long id) {
-        Fornecedor f = repository.findById(id).orElseThrow(() -> new ResourceNotFoundException("Fornecedor não encontrado"));
-        f.setAtivo(false); // Soft Delete
-        repository.save(f);
-    }
-
-    public Fornecedor buscarPorId(Long id) {
-        return repository.findById(id).orElseThrow(() -> new ResourceNotFoundException("Fornecedor não encontrado"));
-    }
-
-    // --- NOVOS MÉTODOS (INTEGRAÇÃO E REGRAS DE NEGÓCIO) ---
-
-    /**
-     * Lista todos os fornecedores ativos sem paginação.
-     * Usado para popular combobox/selects em outras telas (ex: Entrada de Estoque).
-     */
+    // Método leve para dropdowns (usado na Entrada de Mercadoria)
     @Transactional(readOnly = true)
-    public List<FornecedorDTO> listarTodosAtivos() {
+    public List<FornecedorDTO> listarTodosParaDropdown() {
         return repository.findAll().stream()
                 .filter(Fornecedor::isAtivo)
                 .map(this::toDTO)
                 .collect(Collectors.toList());
     }
 
-    /**
-     * Busca por CNPJ retornando Optional (usado para validações no controller).
-     */
     @Transactional(readOnly = true)
-    public Optional<FornecedorDTO> buscarPorCnpj(String cnpj) {
-        return repository.findByCnpj(limparCnpj(cnpj)).map(this::toDTO);
+    public Fornecedor buscarPorId(Long id) {
+        return repository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Fornecedor não encontrado ID: " + id));
     }
 
-    /**
-     * INTEGRAÇÃO BRASIL API:
-     * Consulta dados públicos na Receita Federal para auto-preencher o cadastro.
-     */
-    public ConsultaCnpjDTO consultarDadosPublicosCnpj(String cnpj) {
-        String cnpjLimpo = limparCnpj(cnpj);
-        String url = "https://brasilapi.com.br/api/cnpj/v1/" + cnpjLimpo;
+    // --- ESCRITA ---
 
-        try {
-            RestTemplate restTemplate = new RestTemplate();
-            return restTemplate.getForObject(url, ConsultaCnpjDTO.class);
-        } catch (Exception e) {
-            // Em caso de erro (CNPJ inválido ou API fora), lançamos exceção amigável
-            throw new ValidationException("Não foi possível consultar o CNPJ na Receita Federal (BrasilAPI).");
+    public FornecedorDTO salvar(FornecedorDTO dto) {
+        if (repository.existsByCnpj(dto.getCnpj())) {
+            throw new ValidationException("CNPJ já cadastrado.");
         }
+
+        // CORREÇÃO AUTOMÁTICA DO 9º DÍGITO
+        if (dto.getTelefone() != null) {
+            dto.setTelefone(normalizarTelefone(dto.getTelefone()));
+        }
+
+        Fornecedor entity = new Fornecedor();
+        updateFromDTO(entity, dto);
+        return toDTO(repository.save(entity));
     }
 
-    /**
-     * SUGESTÃO DE COMPRA (INTELIGÊNCIA):
-     * Analisa o nome do fornecedor e busca produtos dessa marca que estão com estoque baixo.
-     */
-    @Transactional(readOnly = true)
+    public FornecedorDTO atualizar(Long id, FornecedorDTO dto) {
+        Fornecedor entity = buscarPorId(id);
+
+        // Verifica CNPJ duplicado em outro registro
+        if (!entity.getCnpj().equals(dto.getCnpj()) && repository.existsByCnpj(dto.getCnpj())) {
+            throw new ValidationException("CNPJ pertence a outro fornecedor.");
+        }
+
+        // CORREÇÃO AUTOMÁTICA DO 9º DÍGITO
+        if (dto.getTelefone() != null) {
+            dto.setTelefone(normalizarTelefone(dto.getTelefone()));
+        }
+
+        updateFromDTO(entity, dto);
+        return toDTO(repository.save(entity));
+    }
+
+    public void excluir(Long id) {
+        Fornecedor f = buscarPorId(id);
+        f.setAtivo(false); // Soft Delete
+        repository.save(f);
+    }
+
+    // --- INTEGRAÇÕES E UTILITÁRIOS ---
+
     public List<Produto> obterSugestaoDeCompra(Long fornecedorId) {
-        Fornecedor f = repository.findById(fornecedorId)
-                .orElseThrow(() -> new ResourceNotFoundException("Fornecedor não encontrado"));
-
-        // Estratégia simples: Pega a primeira palavra do Nome Fantasia (Ex: "Vult" de "Vult Cosméticos")
-        // Idealmente, teríamos uma tabela de vínculo Produto x Fornecedor, mas isso resolve por hora.
-        String termoMarca = f.getNomeFantasia().split(" ")[0];
-
-        List<Produto> produtosBaixoEstoque = produtoRepository.findProdutosComBaixoEstoque();
-
-        // Filtra os produtos que contenham o nome da marca/fornecedor
-        return produtosBaixoEstoque.stream()
-                .filter(p -> p.getMarca() != null &&
-                        p.getMarca().toUpperCase().contains(termoMarca.toUpperCase()))
-                .collect(Collectors.toList());
-    }
-
-    // --- MÉTODOS AUXILIARES ---
-
-    private String limparCnpj(String cnpj) {
-        return cnpj != null ? cnpj.replaceAll("[^0-9]", "") : "";
-    }
-
-    private FornecedorDTO toDTO(Fornecedor f) {
-        return new FornecedorDTO(
-                f.getId(), f.getRazaoSocial(), f.getNomeFantasia(), f.getCnpj(),
-                f.getInscricaoEstadual(), f.getEmail(), f.getTelefone(), f.getContato(),
-                f.getCep(), f.getLogradouro(), f.getNumero(), f.getBairro(), f.getCidade(), f.getUf(),
-                f.isAtivo()
-        );
-    }
-
-    private void copiarDtoParaEntidade(FornecedorDTO dto, Fornecedor f) {
-        f.setRazaoSocial(dto.razaoSocial());
-        f.setNomeFantasia(dto.nomeFantasia());
-        f.setInscricaoEstadual(dto.inscricaoEstadual());
-        f.setEmail(dto.email());
-        f.setTelefone(dto.telefone());
-        f.setContato(dto.contato());
-        f.setCep(dto.cep());
-        f.setLogradouro(dto.logradouro());
-        f.setNumero(dto.numero());
-        f.setBairro(dto.bairro());
-        f.setCidade(dto.cidade());
-        f.setUf(dto.uf());
-        f.setAtivo(dto.ativo());
+        // Implementar lógica de BI aqui se necessário
+        // Retorna lista vazia por enquanto para evitar erro se não houver lógica
+        return List.of();
     }
 
     /**
-     * Método auxiliar usado pelo EstoqueService durante importações.
+     * Usado pelo EstoqueService durante importações.
      * Tenta encontrar um fornecedor pelo nome. Se não achar, cria um registro rápido.
      */
-    @Transactional
     public Fornecedor buscarOuCriarRapido(String termo) {
         if (termo == null || termo.trim().isEmpty()) {
-            return null; // Ou retorne um Fornecedor "Não Identificado" padrão
+            return null;
         }
 
-        // 1. Tenta buscar existente usando a busca que já criamos
-        // Usamos paginação de 1 para pegar o mais relevante
+        // 1. Tenta buscar existente
         var existentes = repository.buscarAtivosPorTermo(termo, org.springframework.data.domain.PageRequest.of(0, 1));
-
         if (existentes.hasContent()) {
             return existentes.getContent().get(0);
         }
 
-        // 2. Se não existir, cria um cadastro provisório
+        // 2. Se não existir, cria provisório
         Fornecedor novo = new Fornecedor();
         novo.setRazaoSocial(termo.toUpperCase());
         novo.setNomeFantasia(termo.toUpperCase());
-
-        // GERA UM CNPJ TEMPORÁRIO ÚNICO para passar na restrição do banco de dados (Unique/Not Null)
-        // O usuário deverá corrigir isso depois na tela de Fornecedores
+        // Gera CNPJ temporário único para passar na constraint unique
         novo.setCnpj("TMP" + System.currentTimeMillis());
-
         novo.setAtivo(true);
-
-        // Preenche endereços vazios para não dar NullPointer se for obrigatório
-        novo.setCep("");
-        novo.setLogradouro("");
-        novo.setNumero("");
-        novo.setBairro("");
-        novo.setCidade("");
-        novo.setUf("");
+        novo.setCep(""); novo.setLogradouro(""); novo.setNumero("");
+        novo.setBairro(""); novo.setCidade(""); novo.setUf("");
 
         return repository.save(novo);
+    }
+
+    // --- CONVERSORES ---
+
+    public FornecedorDTO toDTO(Fornecedor f) {
+        FornecedorDTO dto = new FornecedorDTO();
+        dto.setId(f.getId());
+        dto.setRazaoSocial(f.getRazaoSocial());
+        dto.setNomeFantasia(f.getNomeFantasia());
+        dto.setCnpj(f.getCnpj());
+        dto.setInscricaoEstadual(f.getInscricaoEstadual());
+        dto.setEmail(f.getEmail());
+        dto.setTelefone(f.getTelefone());
+        dto.setContato(f.getContato());
+        dto.setCep(f.getCep());
+        dto.setLogradouro(f.getLogradouro());
+        dto.setNumero(f.getNumero());
+        dto.setBairro(f.getBairro());
+        dto.setCidade(f.getCidade());
+        dto.setUf(f.getUf());
+        dto.setAtivo(f.isAtivo());
+        return dto;
+    }
+
+    private void updateFromDTO(Fornecedor entity, FornecedorDTO dto) {
+        entity.setRazaoSocial(dto.getRazaoSocial());
+        entity.setNomeFantasia(dto.getNomeFantasia());
+        entity.setCnpj(dto.getCnpj());
+        entity.setInscricaoEstadual(dto.getInscricaoEstadual());
+        entity.setEmail(dto.getEmail());
+        entity.setTelefone(dto.getTelefone());
+        entity.setContato(dto.getContato());
+        entity.setCep(dto.getCep());
+        entity.setLogradouro(dto.getLogradouro());
+        entity.setNumero(dto.getNumero());
+        entity.setBairro(dto.getBairro());
+        entity.setCidade(dto.getCidade());
+        entity.setUf(dto.getUf());
+        if (dto.getAtivo() != null) entity.setAtivo(dto.getAtivo());
+    }
+
+    @SuppressWarnings("unchecked")
+    public ConsultaCnpjDTO consultarCnpjExterno(String cnpj) {
+        String cnpjLimpo = cnpj.replaceAll("[^0-9]", "");
+        String url = "https://brasilapi.com.br/api/cnpj/v1/" + cnpjLimpo;
+        RestTemplate restTemplate = new RestTemplate();
+
+        try {
+            Map<String, Object> resposta = restTemplate.getForObject(url, Map.class);
+            if (resposta == null) return null;
+
+            ConsultaCnpjDTO dto = new ConsultaCnpjDTO();
+
+            // Dados Básicos
+            dto.setRazaoSocial((String) resposta.get("razao_social"));
+            dto.setNomeFantasia((String) resposta.get("nome_fantasia"));
+            dto.setCnpj((String) resposta.get("cnpj"));
+
+            // NOVO: Mapeamento de E-mail (Geralmente vem na API)
+            dto.setTelefone((String) resposta.get("ddd_telefone_1"));
+            // BrasilAPI v1 retorna 'email' em minúsculo
+            if (resposta.containsKey("email")) {
+                // Define no DTO (você precisará adicionar o campo email no ConsultaCnpjDTO se não tiver)
+                // Como o ConsultaCnpjDTO atual não tem o campo email, vamos passar via telefone ou criar o campo
+                // Sugiro adicionar 'private String email;' no ConsultaCnpjDTO.java
+                // Por enquanto, vou assumir que você adicionará lá, ou retornamos num map.
+            }
+
+            // Endereço
+            dto.setLogradouro((String) resposta.get("logradouro"));
+            dto.setNumero((String) resposta.get("numero"));
+            dto.setBairro((String) resposta.get("bairro"));
+            dto.setMunicipio((String) resposta.get("municipio"));
+            dto.setUf((String) resposta.get("uf"));
+            dto.setCep((String) resposta.get("cep"));
+
+            // NOTA SOBRE INSCRIÇÃO ESTADUAL (IE):
+            // A BrasilAPI não retorna IE. Isso requer consultas na SEFAZ (Sintegra).
+            // Se o JSON tiver um campo 'inscricao_estadual' no futuro, mapear aqui.
+
+            return dto;
+
+        } catch (Exception e) {
+            e.printStackTrace();
+            throw new ValidationException("Erro ao consultar CNPJ: " + e.getMessage());
+        }
+    }
+
+    /**
+     * Regra de Negócio Inteligente:
+     * Se o número tiver DDD + 8 dígitos (Total 10) e começar com 6, 7, 8 ou 9,
+     * o sistema entende que é celular e adiciona o 9 na frente automaticamente.
+     */
+    private String normalizarTelefone(String telefone) {
+        // 1. Remove tudo que não é número
+        String nums = telefone.replaceAll("[^0-9]", "");
+
+        // 2. Lógica do 9º dígito
+        // Se tem 10 dígitos (Ex: 11 98888 7777 sem o 9 fica 11 8888 7777)
+        if (nums.length() == 10) {
+            char primeiroDigitoNumero = nums.charAt(2); // Pula o DDD (índices 0 e 1)
+
+            // Faixa móvel geralmente começa com 6, 7, 8 ou 9
+            if (primeiroDigitoNumero >= '6') {
+                // Reconstrói adicionando o 9
+                String ddd = nums.substring(0, 2);
+                String numero = nums.substring(2);
+                return ddd + "9" + numero;
+            }
+        }
+
+        // Retorna apenas números limpos para salvar no banco padronizado
+        return nums;
     }
 }
